apps/web/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: web
spec:
  selector:
    app: authelia
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
