apps/web/authelia/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: authelia
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: authelia
          port: 9091
